--- a/notes/01_pca/0_dim.tex
+++ b/notes/01_pca/0_dim.tex
@@ -157,7 +157,7 @@ Let $\widetilde{\vec{x}}$ be the reconstructed observation, where\\
  \end{equation}
 \end{enumerate}
 
-\question{How much error will the recipient accumulate in the case of simple trunction?}
+\question{How much error will the recipient accumulate in the case of simple truncation?}
 
 \end{frame}
 
