--- a/notes/01_pca/2_apply-pca.tex
+++ b/notes/01_pca/2_apply-pca.tex
@@ -19,6 +19,7 @@
 \begin{enumerate}
 \item Dimensionality reduction
 \item Visualization (e.g. plot the projections onto the first 2 or 3 PCs.)
+\item Outlier detection (project onto PCs with \emph{smallest} eigenvalues)
 \item Whitening (i.e. decorrelate the data) - exploit that eigenvectors form an orthonormal basis.
 $$
 \vec v^{(\alpha)} = \vec x_{whitened}^{(\alpha)} = \vec{\Lambda}^{-\frac{1}{2}}\vec{M}^\top\vec{x}^{(\alpha)}
