--- a/notes/02_online-pca/tutorial.tex
+++ b/notes/02_online-pca/tutorial.tex
@@ -62,6 +62,18 @@
 \newpage
 
 \mode<all>
+\input{./0_hebbian}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./1_oja}
+\mode*
+
+\clearpage
+
+\mode<all>
 \input{./1_online-pca}
 \mode*
 
