online pca cont'd

--- a/notes/02_online-pca/1_online-pca.tex
+++ b/notes/02_online-pca/1_online-pca.tex
@@ -25,27 +25,32 @@ Note that with $\vec w = \vec e_1 \; \rightarrow \; y = \vec e_1^\top \vec x =: 
 
 \end{frame}
 
-\begin{frame}{\secname}
-
+\begin{frame}{Only}\frametitle{\secname}
+\only<1-3>{
 We proceed to learning the next PC by doing the following:
+}
 \begin{enumerate}
-\item Denote the network's response with $y_1$ and its weight vector as $\vec w_1$, knowing that $\vec w_1 = \vec e_1$.
-\item Add a second neuron $y_2$ to our network. This neuron will come with its own randomly initialized weight vector $\vec w_2$.
-\item Resume feeding new data points into the network computing its response $y_1$ and $y_2$.
-\item We exploit the fact that the PCs form an \emph{orthonormal basis}, specifically, we obtain a projection of $\vec x$ 
+\item<only@1-3> Denote the network's response with $y_1$ and its weight vector as $\vec w_1$, knowing that $\vec w_1 = \vec e_1$.
+\item<only@1-3> Add a second neuron $y_2$ to our network. This neuron will come with its own randomly initialized weight vector $\vec w_2$.
+\item<only@1-3,4> Resume feeding new data points into the network computing its response $y_1$ and $y_2$.
+\item<only@4,5> We exploit the fact that the PCs form an \emph{orthonormal basis}, specifically, we obtain a projection of $\vec x$ 
 into the subspace orthogonal to $\vec e_1$ that is the first PC:
 \begin{align}
 \hat x_j &= x_j - w_{1j} \, y_1 \\
          &= x_j - a_1 (\vec e_1)_j
 \end{align}
 where $w_{1j}$ is the weight of the connection between $\hat x_j$ and the neuron $y_1$,
-\item Apply Oja's rule on $\vec w_2$.
+\item<only@4-> Apply Oja's rule on $\vec w_2$.
 
 For \emph{stationary data}: No need to apply updates to $\vec w_1$ anymore, since it has already converged to $\vec e_1$. Applying it to $\vec w_1$ will yields negligible change.
  
-\item Continue feeding observations until $\vec w_2$ has converged.
-\item On convergence, $\vec w_2 = \vec e_2$.
+\item<only@4-> Continue feeding observations until $\vec w_2$ has converged.
+\item<only@4-> On convergence, $\vec w_2 = \vec e_2$.
 \end{enumerate}
+
+\end{frame}
+
+\begin{frame}
 
 We get the remaining PCs by repeating the above except, that we project 
 the data onto the subspace orthogonal to all previous PCs (cf. slides 1.2 \#12-\#14).
