--- a/notes/01_pca/0_dim.tex
+++ b/notes/01_pca/0_dim.tex
@@ -103,7 +103,7 @@ while retaining as most of the intrinsic information content.
 
 \only<3>{
 \vspace{5mm}
-	restore $N$-dimensional vector using \textcolor{blue}{simple trunction}.
+	restore $N$-dimensional vector using \textcolor{blue}{simple truncation}.
 	
 \svspace{5mm}
 
@@ -208,7 +208,7 @@ Let $\widetilde{\vec{x}}$ be the reconstructed observation. }
 \end{equation}
 }
 
-In the case of simple trunctation 
+In the case of simple truncation 
 the recipient will end up with an MSE equal to $\sum_{j=M+1}^{N} \sigma_j^2$, where $\sigma_j^2$ is the variance of the $x_j$.
 \only<1>{
 \begin{equation}
@@ -227,7 +227,7 @@ the recipient will end up with an MSE equal to $\sum_{j=M+1}^{N} \sigma_j^2$, wh
 
 \pause
 
-- Sort the $N$ component in $\vec x$ from highest to lowest variance. \notesonly{The transformation here would be some permutation of the idenitty matrix that accomplishes the sorting.}\slidesonly{transformation: permutation of identity matrix}
+- Sort the $N$ component in $\vec x$ from highest to lowest variance. \notesonly{The transformation here would be some permutation of the identity matrix that accomplishes the sorting.}\slidesonly{transformation: permutation of identity matrix}
 
 \question{Is this enough?}
 
