--- a/notes/01_pca/1_pca.tex
+++ b/notes/01_pca/1_pca.tex
@@ -79,7 +79,7 @@ Plotting the sorted eigenvalues is referred to as a \emph{scree plot}
 
 \subsection{Projection and Reconstruction error}
 
-\begin{frame}\frametitle{How much better is this vs. simple trunctation?}
+\begin{frame}\frametitle{How much better is this vs. simple truncation?}
 %\newpage
 
 \only<1,2>{
