--- a/notes/01_pca/2_apply-pca.tex
+++ b/notes/01_pca/2_apply-pca.tex
@@ -58,7 +58,7 @@ We bascially need a routine with which to solve the eigenvalue problem.
     
 \pause
 
-For python, the obvious choice is to use a routine like \textit{numpy.linalg.eig(A)}. \emph{Watch out for how to intepret the output.}
+For python, the obvious choice is to use a routine like \textit{numpy.linalg.eig(A)}. \emph{Watch out for how to interpret the output.}
 
 \end{frame}
 
@@ -104,13 +104,13 @@ $$
 
 \begin{frame}\frametitle{\subsubsecname}
 
-\question{When to use SVD vs. Eig? \textbf{Not dogma}}
+\question{When to use \textit{SVD} vs. \text{Eig}? \textbf{Not dogma}}
 
 \begin{itemize}
 
-\item Numerical instabilities in eigendecomposition of very large covariance matrix $\rightarrow$ SVD
-\item SVD not applicable to Kernel-PCA $\rightarrow$ Eig
-\item Computational efficiency $\rightarrow$ SVD (depends...?)
+\item Numerical instabilities in eigendecomposition of very large covariance matrix $\rightarrow$ \textit{SVD}
+\item SVD not applicable to Kernel-PCA $\rightarrow$ \textit{Eig}
+\item Computational efficiency $\rightarrow$ \textit{SVD} (depends...?)
 \end{itemize}
 
 \slidesonly{
