--- a/notes/01_pca/0_cov.tex
+++ b/notes/01_pca/0_cov.tex
@@ -15,8 +15,8 @@
 Let $\vec x \in \R^N$.
 
 \begin{equation}
-\text{Variance}~\sigma_j^2 = \E\lbrack~(x_j - m_j)^2~\rbrack = \frac{1}{p} \sum\limits_{\alpha = 1}^p 
-		 \Big( \mathrm{x}_j^{(\alpha)} - m_j \Big) \quad \forall j=1,\ldots,N
+\text{Variance}~\sigma_j^2 = \E\Big\lbrack~(x_j - m_j)^2~\Big\rbrack = \frac{1}{p} \sum\limits_{\alpha = 1}^p 
+		 \Big( \mathrm{x}_j^{(\alpha)} - m_j \Big)^2 \quad \forall j=1,\ldots,N
 \end{equation}
 
 \pause
@@ -43,14 +43,50 @@ $\vec{C}_{N \times N}$ is real and symmetric.
 \definecolor{byzantium}{rgb}{0.44, 0.16, 0.39}
 
 \begin{frame}\frametitle{Covariance matrix}
+
+\mode<presentation>{
+\only<1>{
+\begin{center}
+\includegraphics[width=0.6\textwidth]{img/scatter}%
+\end{center}
+}
+\only<2>{
 \begin{center}
 \includegraphics[width=0.6\textwidth]{img/cov}%
 \end{center}
 
 \slidesonly{\vspace{-10mm}}
-\question{Define a possible covariance matrix for each of the four datasets.}
+}
+}
 
-\notesonly{
+
+\mode<article>{
+
+\begin{figure}[ht]
+     \centering
+     \savebox{\imagebox}{
+	 \includegraphics[width=0.28\textwidth]{img/scatter}}%
+     \begin{subfigure}[t]{0.28\textwidth}
+         \centering
+         \usebox{\imagebox}% Place largest image
+         \caption{Scatter plots}
+     \end{subfigure}
+     \hspace{2mm}
+     \begin{subfigure}[t]{0.28\textwidth}
+         \centering
+         \raisebox{\dimexpr.5\ht\imagebox-.5\height}{% Raise smaller image into place
+         \includegraphics[width=0.99\textwidth]{img/cov}
+         }
+         \caption{Contour plots}
+         \label{fig:linear}
+     \end{subfigure}
+\end{figure}
+}
+
+\question{Define a possible covariance matrix for each of the four datasets above.}
+
+\mode<article>{
+
 \begin{center}
 \resizebox{.5\textwidth}{!}{%
 \begin{tabular}{rl}
@@ -60,5 +96,7 @@ $\vec{C}_{N \times N}$ is real and symmetric.
 }
 \end{center}
 }
+
+
 
 \end{frame}
