--- a/notes/01_pca/2_apply-pca.tex
+++ b/notes/01_pca/2_apply-pca.tex
@@ -21,17 +21,17 @@
 \item Visualization (e.g. plot the projections onto the first 2 or 3 PCs.)
 \item Outlier detection (project onto PCs with \emph{smallest} eigenvalues)
 \item Whitening (i.e. decorrelate the data) - exploit that eigenvectors form an orthonormal basis.
-$$
-\vec v^{(\alpha)} = \vec x_{whitened}^{(\alpha)} = \vec{\Lambda}^{-\frac{1}{2}}\vec{M}^\top\vec{x}^{(\alpha)}
+\begin{equation}
+\vec x_{whitened}^{(\alpha)} = \vec{\Lambda}^{-\frac{1}{2}}\vec{M}^\top\vec{x}^{(\alpha)}
 \quad
 \forall \alpha
-$$
+\end{equation}
 
 \question{What is the covariance of $\vec x_{whitened}$?}
 
 \pause
 
--the Identity matrix.
+- the Identity matrix.
 
 \end{enumerate}
 
@@ -71,7 +71,7 @@ For python, the obvious choice is to use a routine like \textit{numpy.linalg.eig
 \notesonly{Yes, namely,}
 
 \underline{Singular Value Decomposition (SVD)}:\\
-Let $\vec X' \in \R^{N \times p}$ be the centered dataset (centering is a must):
+Let $\vec X \in \R^{N \times p}$ be the centered dataset (centering is a must):
 \begin{equation}
 \vec X'_{N \times p} = \vec U_{N \times N} \, \vec S_{N \times p} \, \vec V^\top_{{p \times p}}
 \end{equation}
@@ -88,15 +88,15 @@ where,
 \end{equation} (i.e. $\vec U$, $\vec V$ are orthogonal).
 \begin{itemize}
 
-\item<only@2> The columns of $\vec V$ (or rows of $\vec V^\top$) make up the eigenvectors of $\vec X'^\top\vec X'$.
-\item<only@3,4,5> The columns of $\vec U$ make up the eigenvectors of $\vec X'\vec X'^\top$.
-\item<only@4,5> $\vec S$ is a diagonal matrix. The singular values in $\vec S$ (the diagonal entries) are the \textbf{square roots} of the  eigenvalues of the eigenvectors of $\vec X'\vec X'^\top$ or $\vec X'^\top\vec X'$.
+\item<only@2> The columns of $\vec V$ (or rows of $\vec V^\top$) make up the eigenvectors of $\vec X^\top\vec X$.
+\item<only@3,4,5> The columns of $\vec U$ make up the eigenvectors of $\vec X~\vec X^\top$.
+\item<only@4,5> $\vec S$ is a diagonal matrix. The singular values in $\vec S$ (the diagonal entries) are the \textbf{square roots} of the  eigenvalues of the eigenvectors of $\vec X~\vec X^\top$ or $\vec X^\top\vec X$.
 \end{itemize}
 
 \only<5>{
 Recall:
 $$
-\vec C = \E[\vec X' \vec X'^\top] = \frac{1}{p} \vec X' \vec X'^\top
+\vec C = \E[\vec X~\vec X^\top] = \frac{1}{p} \vec X~\vec X^\top
 $$
 }
 
@@ -115,7 +115,7 @@ $$
 
 \slidesonly{
 $$
-\vec X' \in \R^{N \times p} \quad \leadsto \quad \vec C = \frac{1}{p} \vec X' \vec X'^\top
+\vec X \in \R^{N \times p} \quad \leadsto \quad \vec C = \frac{1}{p} \vec X~\vec X^\top
 $$
 }
 
