--- a/notes/01_pca/2_apply-pca.tex
+++ b/notes/01_pca/2_apply-pca.tex
@@ -73,7 +73,7 @@ For python, the obvious choice is to use a routine like \textit{numpy.linalg.eig
 \underline{Singular Value Decomposition (SVD)}:\\
 Let $\vec X \in \R^{N \times p}$ be the centered dataset (centering is a must):
 \begin{equation}
-\vec X'_{N \times p} = \vec U_{N \times N} \, \vec S_{N \times p} \, \vec V^\top_{{p \times p}}
+\vec X_{N \times p} = \vec U_{N \times N} \, \vec S_{N \times p} \, \vec V^\top_{{p \times p}}
 \end{equation}
 \svspace{-5mm}
 where,
