--- a/notes/02_online-pca/1_online-pca.tex
+++ b/notes/02_online-pca/1_online-pca.tex
@@ -10,8 +10,8 @@
 }
 
 \begin{frame}
-We have established that we can use Hebbian learning (Oja's rule to prevent divergence) 
-to find the direction of the first principle component $\vec e_1$ in the data. \\
+W\notesonly{e have established that w}e can use Hebbian learning (Oja's rule to prevent divergence) 
+to find the direction of the first \notesonly{principle component $\vec e_1$}\slidesonly{PC} in the data. \\
 
 \pause
 
