--- a/notes/02_online-pca/0_hebbian.tex
+++ b/notes/02_online-pca/0_hebbian.tex
@@ -44,18 +44,60 @@
 
 \begin{frame}{\secname}
 
+\svspace{-3mm}
+
+\only<1-3>{
+\begin{center}
+\includegraphics[width=4cm]{img/section2_fig5_a}
+\captionof{figure}{A linear neuron}
+\end{center}
+}
+
 \begin{itemize}
-\item[] observations: $\big\{ \vec{x}^{(\alpha)} \big\}, \alpha = 1, \ldots, p; \quad \vec{x} \in \R^N$\\
+\item[] 
+\only<1-3>{
+Observations:\notesonly{\\}
+\begin{equation}
+\big\{ \vec{x}^{(\alpha)} \in \R^N \big\},\; \alpha = 1, \ldots, p,
+\end{equation}
+\notesonly{
+\begin{equation}
+\big(x_1, x_2,\ldots,x_j,\ldots,x_N\big)^\top = \vec{x} \in \R^N
+\end{equation}
+}
 
-\item[] assumption: centered data\\
+\item[] Assumption: centered data\notesonly{,
+\begin{equation}\E\lbrack \vec x \rbrack = \vec 0
+\end{equation}}
 
-\item[] response: $y = \sum_{i=1}^{N} w_i x_i = \vec w^{\top} \vec x$\\
+}
+
+\mode<presentation>{
+\only<2>{
+\begin{center}
+\includegraphics[width=2.5cm]{img/meme_centeronemoretime}
+\end{center}
+}
+}
+\only<3->{
+\item[] Response: 
+\begin{equation}
+y = \sum_{j=1}^{N} w_j x_j = \vec w^{\top} \vec x \only<4>{= \lVert \vec w \rVert \, \lVert \vec x \rVert \cos \theta}
+\end{equation}
 
 \item[] We don't really have a desired output for the network.\\
-\item[] However, we can interpret its response $y$.
+\item[] However, we can interpret its response $y$.\\
+}
+\only<4>{
+
+\begin{center}
+\includegraphics[width=4.5cm]{img/wxangle}
+\end{center}
+
 The inner product yields a higher value whenever $\vec x$ is ``close'' to $\vec w$.
 Therefore, $y$ measures similarity between $\vec x$ and $\vec w$.
 A large value of $y$ means that the network ``recognizes'' the stimulus $\vec x$.
+}
 \end{itemize}
 
 \end{frame}
