--- a/notes/02_online-pca/1_online-pca.tex
+++ b/notes/02_online-pca/1_online-pca.tex
@@ -27,6 +27,14 @@ Note that with $\vec w = \vec e_1 \; \rightarrow \; y = \vec e_1^\top \vec x =: 
 
 \begin{frame}{Only}\frametitle{\secname}
 \only<1-3>{
+\svspace{-7mm}
+\begin{center}
+\includegraphics[width=4cm]{img/section2_fig5_b_2}
+\svspace{-5mm}
+\captionof{figure}{A neural network}
+\end{center}
+\svspace{-3mm}
+
 We proceed to learning the next PC by doing the following:
 }
 \begin{enumerate}
