--- a/notes/02_online-pca/tutorial.tex
+++ b/notes/02_online-pca/tutorial.tex
@@ -79,6 +79,10 @@
 
 \clearpage
 
+\mode<all>
+\input{./2_apply-online-pca}
+\mode*
+
 %\section{References}
 %\begin{frame}[allowframebreaks] \frametitle{References}
 	%\scriptsize
